--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <img class="logo" src="./src/imagens/CTALogo.png" alt="logo Carrara Theft Auto" />
 
-        <p class="descricao">Carrara Theft Auto é uma versão ficticia do jogo Grand Theft Auto da produtora Rockstar Games, que mistura a vontade dos gamers brasileiros em ter uma versão nacional do game, com a caricata interpretação de <a href="https://www.instagram.com/pedrocardosoeumesmo/" target="_blank"><font color="#fff0ff"><u>Pedro cardoso</u></font></a> como Agostinho Carrara, trazendo consigo representatividade suficiente para se tornar o personagem nacional na série de jogos. </p>
+        <p class="descricao">Carrara Theft Auto é uma versão fictícia do jogo Grand Theft Auto da produtora Rockstar Games, que mistura a vontade dos gamers brasileiros em ter uma versão nacional do game, com a caricata interpretação de <a href="https://www.instagram.com/pedrocardosoeumesmo/" target="_blank"><font color="#fff0ff"><u>Pedro cardoso</u></font></a> como Agostinho Carrara, trazendo consigo representatividade suficiente para se tornar o personagem nacional na série de jogos. </p>
       </div>
 
       <div class="botoes-carrossel">
